Update theme colour

--- a/src/content/css/themes/boulevard.css
+++ b/src/content/css/themes/boulevard.css
@@ -14,7 +14,7 @@
   --key: #000000;
   --null: #807684;
   --control-bar-background: #e2d9d6;
-  --line-focused: #eae5e5;
+  --line-focused: #e2d9d6;
   --selection: #d6c8c2;
   --on-selection: #000000;
 }
