--- a/src/content/css/themes/abyssal.css
+++ b/src/content/css/themes/abyssal.css
@@ -8,9 +8,9 @@
   --keylines: #364358;
   --punctuation: #677996;
   --collapsed-count: #677996;
-  --string: #7094B7;
-  --number: #B5D5F0;
-  --boolean: #82BEBC;
+  --string: #97B0CA;
+  --number: #9DD0F9;
+  --boolean: #77D9D6;
   --key: #D7DEEA;
   --null: #677996;
   --control-bar-background: #3C4555;
