--- a/src/content/css/themes/clear.css
+++ b/src/content/css/themes/clear.css
@@ -8,9 +8,9 @@
   --keylines: #dddddd;
   --punctuation: #888888;
   --collapsed-count: #888888;
-  --string: #0f6800;
-  --number: #002368;
-  --boolean: #8c0000;
+  --string: #0C8D19;
+  --number: #2650BB;
+  --boolean: #BA1C42;
   --key: #000000;
   --null: #888888;
   --control-bar-background: #eeeeee;
