--- a/src/content/css/themes/abyssal.css
+++ b/src/content/css/themes/abyssal.css
@@ -14,6 +14,7 @@
   --key: #D7DEEA;
   --null: #677996;
   --control-bar-background: #3C4555;
+  --control-bar-shadow: rgba(255, 255, 255, 0.1);
   --line-focused: #384152;
   --selection: #D7DEEA;
   --on-selection: #2D3441;
