--- a/src/content/css/themes/tokyo-night.css
+++ b/src/content/css/themes/tokyo-night.css
@@ -14,6 +14,7 @@
   --key: #C0CAF5;
   --null: #888DA8;
   --control-bar-background: #313853;
+  --control-bar-shadow: rgba(255, 255, 255, 0.1);
   --line-focused: #282E45;
   --selection: #3C4463;
   --on-selection: inherit;
