--- a/src/content/css/json.css
+++ b/src/content/css/json.css
@@ -135,7 +135,7 @@ li {
 .control-bar {
   align-items: center;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100vw;
   height: 24px;
   background: var(--control-bar-background);
@@ -230,4 +230,23 @@ li.in-focus {
 
 .null {
   color: var(--null);
+}
+
+.action-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.theme-picker {
+  position: relative;
+}
+
+.theme-picker select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: relative;
+  z-index: 0;
 }
