--- a/src/content/css/json.css
+++ b/src/content/css/json.css
@@ -135,7 +135,7 @@ li {
 .control-bar {
   align-items: center;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100vw;
   height: 24px;
   background: var(--control-bar-background);
@@ -182,7 +182,6 @@ pre.raw {
   display: flex;
   align-items: center;
   cursor: pointer;
-  text-transform: uppercase;
 }
 
 .json-path {
@@ -230,4 +229,37 @@ li.in-focus {
 
 .null {
   color: var(--null);
+}
+
+.action-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.theme-picker {
+  height: 100%;
+}
+
+.theme-picker select {
+  font-family: var(--font-mono);
+  color: var(--primary);
+  font-size: 12px;
+  appearance: none;
+  background: transparent;
+  border: none;
+  outline: none;
+  text-align: left;
+  height: 100%;
+  padding: 0 8px 0 4px;
+  cursor: pointer;
+}
+
+.theme-picker span {
+  color: var(--secondary);
+}
+
+.theme-picker select:hover {
+  color: var(--secondary);
 }
